--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,6 +7,12 @@
 @import url('./reset.css');
 @import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./hero.css');
+@import url('./about.css');
+@import url('./product.css');
+@import url('./contact.css');
+@import url('./footer.css');
+
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +28,64 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: 'Roboto', sans-serif;
+}
+
+.section {
+  padding: 50px 0;
+}
+
+@media screen and (min-width: 768px) {
+  .section {
+    padding: 100px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .section {
+    padding: 30px;
+  }
+}
+
+.container {
+  min-width: 320px;
+  padding: 0 16px;
+  margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+    padding: 0 20px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .container {
+    max-width: 1158px;
+    padding: 0 15px;
+  }
+}
+
+.title {
+  font-size: 36px;
+  line-height: 1.2;
+  margin: 0 0 50px;
+}
+
+.button {
+  background-color: #3011bc;
+  padding: 20px;
+  border-radius: 4px;
+  font-size: 18px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button:hover,
+.button:focus {
+  background-color: #404bbf;
 }
